<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="about_text">App is developed by Programmer. You can send reports and suggestions to support@programmer.com.ua</string>
    <string name="submit_request">Request status</string>
    <string name="document">Document</string>
    <string name="document_number">Number: %s</string>
    <string name="status">Status: %s</string>
    <string name="barcode_hint">Enter or scan barcode</string>
    <string name="scanner_icon_description">Launch barcode scanner</string>
    <string name="default_barcode" translatable="false">7712158715349</string>
    <string name="title_about">About</string>
    <string name="title_login">Process documents</string>
    <string name="app_name">One By One</string>
    <string name="title_settings">Settings</string>
    <string name="api_request_text">Requesting status…</string>
    <string name="app_version">Version: %s</string>
    <string name="device_id">Device ID: %s</string>
    <string name="title_scanner">Barcode scanner</string>
    <string name="pause">Pause processing</string>
    <string name="start">Start processing</string>
    <string name="finish">Finish processing</string>
    <string name="warning">Warning</string>
    <string name="operation_cancelled">Operation cancelled. %s</string>
    <string name="ok">OK</string>
    <string name="pref_title_server_address">Server address</string>
    <string name="pref_title_api_path">Api root path</string>
    <string name="pref_title_category_server">Connection parameters</string>
    <string name="pref_summary_empty_text">Value not set</string>
    <string name="error_no_connection_settings">Connection settings not set</string>
    <string name="title_select_workshop">Select workshop</string>
    <string name="workshop_cut">Cutting workshop</string>
    <string name="workshop_develop">Development workshop</string>
    <string name="auth_success">Authentication successful</string>
    <string name="auth_error">Authentication error</string>
    <string name="boss_screen">Boss mode</string>
    <string name="boss">Boss</string>
    <string name="employee">Employee</string>
    <string name="employee_screen">Employee screen</string>
    <string name="mode_manual">Manual</string>
    <string name="mode_auto">Auto</string>
    <string name="processed_documents">Processed documents</string>
    <string name="error_no_response">No response from server</string>
    <string name="error_nothing_selected">Nothing is selected</string>
    <string name="no_data">No data</string>
    <string name="date_plan">Plan date</string>
    <string name="holder_text" translatable="false">...</string>
    <string name="date_time_picker">Date and time</string>
    <string name="table">Table</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="not_selected" translatable="false">\?</string>
    <string name="select_all_parameters">Select all parameters</string>
    <string name="select_table">Select table</string>
    <string name="cancel">Cancel</string>
    <string name="available_date">Available date</string>
    <string name="success">Success</string>
    <string name="change_status">Change status</string>
    <string name="reload">Reload</string>
    <string name="stop">Stop</string>
    <string name="reset_date_time">Reset date and time?</string>
    <string name="reset">Reset</string>
    <string name="set_available_date">Copy available date and time?</string>
    <string name="expand_document_content">Expand document content</string>
</resources>