<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/selectWorkshopFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="ua.com.programmer.vbvremote.login.LoginFragment"
        android:label="@string/title_login" >
        <action
            android:id="@+id/action_loginFragment_to_scannerFragment"
            app:destination="@id/scannerFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="ua.com.programmer.vbvremote.about.AboutFragment"
        android:label="@string/title_about" />
    <fragment
        android:id="@+id/scannerFragment"
        android:name="ua.com.programmer.vbvremote.scanner.ScannerFragment"
        android:label="@string/title_scanner" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="ua.com.programmer.vbvremote.settings.SettingsFragment"
        android:label="@string/title_settings" />
    <fragment
        android:id="@+id/selectWorkshopFragment"
        android:name="ua.com.programmer.vbvremote.workshop.SelectWorkshopFragment"
        android:label="@string/title_select_workshop" >
        <action
            android:id="@+id/action_selectWorkshopFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
</navigation>