<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="2dp"
        app:cardBackgroundColor="?android:colorBackground"
        app:cardElevation="2dp"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/doc_expand"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/expand_document_content"
                        android:src="@drawable/baseline_arrow_right_24"/>
                    <TextView
                        android:id="@+id/doc_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textStyle="bold"
                        android:text="@string/document"/>
                    <TextView
                        android:layout_width="8dp"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/doc_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:maxLines="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:text="@string/holder_text"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/date_plan"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
                    <TextView
                        android:layout_width="8dp"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/doc_date_plan"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:maxLines="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:text="@string/holder_text"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/doc_content_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp">
                    <TextView
                        android:id="@+id/doc_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/table"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:gravity="center"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="@string/holder_text" />

            <ImageView
                android:id="@+id/status_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/baseline_stop_24"
                android:gravity="center"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:contentDescription="@string/status" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>